name:                octoclient
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/octoclient#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Drummond
maintainer:          a.d.drummond@gmail.com
copyright:           2017 Alex Drummond
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable octoclient
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       CSV, Octopart, BOM
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , req == 0.3.0
                     , aeson == 1.2.1.0
                     , bytestring >= 0.10
                     , text >= 1.2
                     , vector >= 0.11
                     , scientific >= 0.3
                     , extra >= 1.5
                     , vector-algorithms >= 0.7
                     , formatting >= 6.2
                     , bytestring-tree-builder >= 0.2.7

Test-Suite test-csv
  type:               exitcode-stdio-1.0
  main-is:            TestCSV.hs
  other-modules:      CSV
  hs-source-dirs:     test, src
  build-depends:      base >=4.7
                    , test-framework
                    , test-framework-hunit
                    , HUnit
                    , containers == 0.5.*
                    , bytestring >= 0.10